# c-expressions

./: CMakeLists.txt  README.md  extern.cpp  externglb.h  globalvariab.cpp  main.cpp  operators.cpp  registervariab.cpp  srorageclass.cpp  staticgbdeclaration.h  staticglobal.cpp  staticvar.cpp  variables.cpp  xor_operator.cpp
