cmake_minimum_required(VERSION 2.8)
set(CAMKE_BUILD_TYPE Debug)
add_compile_options(-std=c++11)
project(Chapter3_ex)

add_executable(${PROJECT_NAME}
# "main.cpp"
 # "variables.cpp"
 #"globalvariab.cpp"
 #"srorageclass.cpp"
# "extern.cpp"
# "externglb.h"
# "staticvar.cpp"
# "staticglobal"
 #"staticgbdeclaration.h"
# "registervariab"
#"operators.cpp"
"xor_operator.cpp"
)
